Pedejas izmainas: komentari pievienoti, valoda parmainita uz LV, izveidots email verifikacija, ka ari mazas dizaina izmainas,  nodzests fails, kas satureja API keys

--- a/MovieScribe/Views/Account/AccessDenied.cshtml
+++ b/MovieScribe/Views/Account/AccessDenied.cshtml
@@ -4,7 +4,7 @@
         <h2>404 NotFound</h2>
         <hr />
         <p>
-            <a asp-controller="Home" asp-action="Index" class="btn btn-outline-success">Home Page</a>
+            <a asp-controller="Home" asp-action="Index" class="btn btn-outline-success">Uz sākumlapu</a>
         </p>
     </div>
 </div>
