--- a/MovieScribe/Views/Account/ResetPassword.cshtml
+++ b/MovieScribe/Views/Account/ResetPassword.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MovieScribe.Data.ViewModels;
-@model ChangePasswordViewModel
+@model ResetPasswordViewModel
 
 <section class="vh-100">
     <div class="container py-5 h-100">
@@ -9,27 +9,24 @@
 
                     <div class="card-body p-5 text-center">
                         <div class="mb-md-5 mt-md-4 pb-5">
-                            <h2 class="fw-bold mb-2 text-uppercase" style="margin-bottom: 5px">Paroles maiņa</h2>
+                            <h2 class="fw-bold mb-2 text-uppercase">Atiestatīt paroli</h2>
+                            <p class="text-white-50 mb-5">Lūdzu, ievadiet savu jauno paroli.</p>
 
-                            <form asp-action="ChangePassword">
+                            <form asp-action="ResetPassword">
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
+                                <input asp-for="Code" type="hidden" />
+                                <input asp-for="Email" type="hidden" />
                                 <div class="form-outline form-white mb-4">
-                                    <input asp-for="CurrentPassword" class="form-control form-control-lg" placeholder="Pašreizējā parole" />
-                                    <span asp-validation-for="CurrentPassword" class="text-danger"></span>
+                                    <input asp-for="Password" class="form-control form-control-lg" placeholder="Jaunā parole" />
+                                    <span asp-validation-for="Password" class="text-danger"></span>
                                 </div>
-
-                                <div class="form-outline form-white mb-4">
-                                    <input asp-for="NewPassword" class="form-control form-control-lg" placeholder="Jaunā parole" />
-                                    <span asp-validation-for="NewPassword" class="text-danger"></span>
-                                </div>
-
                                 <div class="form-outline form-white mb-4">
                                     <input asp-for="ConfirmPassword" class="form-control form-control-lg" placeholder="Apstiprini jauno paroli" />
                                     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                                 </div>
 
-                                <input class="btn btn-outline-light btn-lg px-5" type="submit" value="Mainīt paroli" />
+                                <input class="btn btn-outline-light btn-lg px-5" type="submit" value="Atiestatīt paroli" />
+
                             </form>
                         </div>
                     </div>
