--- a/MovieScribe/Views/Actor/Details.cshtml
+++ b/MovieScribe/Views/Actor/Details.cshtml
@@ -8,7 +8,7 @@
                     <div class="card-body p-5 text-center">
 
                         <div class="mb-md-5 mt-md-4 pb-5">
-                            <h2 class="fw-bold mb-2 text-uppercase">@Model.FullName Details</h2>
+                            <h2 class="fw-bold mb-2 text-uppercase">@Model.FullName Apraksts</h2>
 
                             <div class="row">
                                 <div class="col-md-6 pr-md-5">
@@ -28,7 +28,7 @@
                                 <div class="col-md-6 text-left pl-md-5">
                                     <div class="form-group">
                                         <p class="card-text">
-                                            <b style="color: white;">Age:</b>
+                                            <b style="color: white;">Vecums:</b>
                                             <div class="badge badge-pill badge-custom" style="font-size: 1.2em;">
                                                 @Model.Age
                                             </div>
@@ -36,7 +36,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <b style="color: white;">Biography:</b>
+                                        <b style="color: white;">Biogrāfija:</b>
                                         <p class="biography-text" style="font-size: 1.2em;">
                                             @Model.Biography
                                         </p>
