--- a/MovieScribe/Views/Distributor/Details.cshtml
+++ b/MovieScribe/Views/Distributor/Details.cshtml
@@ -8,7 +8,7 @@
                     <div class="card-body p-5 text-center">
 
                         <div class="mb-md-5 mt-md-4 pb-5">
-                            <h2 class="fw-bold mb-2 text-uppercase">@Model.Name Details</h2>
+                            <h2 class="fw-bold mb-2 text-uppercase">@Model.Name Apraksts</h2>
 
                             <div class="row">
                                 <div class="col-md-6 pr-md-5">
@@ -26,7 +26,7 @@
 
                                 <div class="col-md-6 text-left pl-md-5">
                                     <div class="form-group">
-                                        <b style="color: white;">Description:</b>
+                                        <b style="color: white;">Apraksts:</b>
                                         <p class="biography-text" style="font-size: 1.2em;">
                                             @Model.Description
                                         </p>
