--- a/MovieScribe/Views/Media/Recommendations.cshtml
+++ b/MovieScribe/Views/Media/Recommendations.cshtml
@@ -49,5 +49,7 @@
     DisplayPageCountAndCurrentLocation = false,
     MaximumPageNumbersToDisplay = 5,
     DisplayEllipsesWhenNotShowingAllPageNumbers = true,
-    UlElementClasses = new[] { "pagination justify-content-center" }, // bootstrap classes to center the pagination
+    UlElementClasses = new[] { "pagination" },
+        LiElementClasses = new[] { "page-item" },
+        PageClasses = new[] { "page-link" },
 })
