--- a/MovieScribe/Views/Account/Login.cshtml
+++ b/MovieScribe/Views/Account/Login.cshtml
@@ -16,23 +16,23 @@
 
                     <div class="card-body p-5 text-center">
                         <div class="mb-md-5 mt-md-4 pb-5">
-                            <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-                            <p class="text-white-50 mb-5">Please enter your login and password!</p>
+                            <h2 class="fw-bold mb-2 text-uppercase">Autorizācija</h2>
+                            <p class="text-white-50 mb-5">Lūdzu, ievadiet savu e-pastu un paroli!</p>
 
                             <form asp-action="Login">
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                                 <div class="form-outline form-white mb-4">
-                                    <input asp-for="EmailAddress" id="typeEmailX" class="form-control form-control-lg" placeholder="Email address" />
+                                    <input asp-for="EmailAddress" id="typeEmailX" class="form-control form-control-lg" placeholder="E-pasta adrese" />
                                     <span asp-validation-for="EmailAddress" class="text-danger"></span>
                                 </div>
 
                                 <div class="form-outline form-white mb-4">
-                                    <input asp-for="Password" id="typePasswordX" class="form-control form-control-lg" placeholder="Password" />
+                                    <input asp-for="Password" id="typePasswordX" class="form-control form-control-lg" placeholder="Parole" />
                                     <span asp-validation-for="Password" class="text-danger"></span>
                                 </div>
 
-                                <input class="btn btn-outline-light btn-lg px-5" type="submit" value="Login" />
+                                <input class="btn btn-outline-light btn-lg px-5" type="submit" value="Autorizēties" />
 
                             </form>
 
@@ -40,9 +40,12 @@
 
                         <div>
                             <p class="mb-0">
-                                Don't have an account? <a asp-controller="Account" asp-action="Register" class="text-white-50 fw-bold">Sign Up</a>
+                                Vai jums nav konta? <a asp-controller="Account" asp-action="Register" class="text-white-50 fw-bold">Reģistrējaties</a>
                             </p>
                         </div>
+                        <p class="mt-3 mb-0">
+                            <a asp-controller="Account" asp-action="ForgotPassword" class="text-white-50 fw-bold">Vai aizmirsāt paroli?</a>
+                        </p>
 
                     </div>
                 </div>
