--- a/MovieScribe/Views/Account/UserDetails.cshtml
+++ b/MovieScribe/Views/Account/UserDetails.cshtml
@@ -9,7 +9,7 @@
                     <div class="card-body p-5 text-center">
 
                         <div class="mb-md-5 mt-md-4 pb-5">
-                            <h2 class="fw-bold mb-2 text-uppercase">@Model.UserName's Details</h2>
+                            <h2 class="fw-bold mb-2 text-uppercase">@Model.UserName's Apraksts</h2>
 
                             <div class="row">
                                 <div class="col-md-6 pr-md-5">
@@ -19,7 +19,7 @@
                                 <div class="col-md-6 text-left pl-md-5">
                                     <div class="form-group">
                                         <p class="card-text">
-                                            <b style="color: white;">Username:</b>
+                                            <b style="color: white;">Lietotājvārds:</b>
                                             <div class="badge badge-pill badge-custom" style="font-size: 1.2em;">
                                                 @Model.UserName
                                             </div>
@@ -27,18 +27,18 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <b style="color: white;">Email Address:</b>
+                                        <b style="color: white;">E-pasta adrese:</b>
                                         <p class="email-text" style="font-size: 1.2em;">
                                             @Model.EmailAddress
                                         </p>
                                     </div>
 
-                                    <a class="btn btn-warning float-right" asp-action="ChangePassword">Change Password</a>
+                                    <a class="btn btn-warning float-right" asp-action="ChangePassword">Mainīt paroli</a>
                                     <form id="delete-account-form" asp-action="DeleteAccount" asp-controller="Account" method="post">
                                         <input type="hidden" name="userId" value="@Model.ID" />
                                         <div id="delete-account-button-container" class="float-right mt-2">
-                                            <button id="delete-account-btn" class="btn btn-danger">Delete Account</button>
-                                            <button id="confirm-delete-account-btn" class="btn btn-danger" style="display: none;">Confirm Delete</button>
+                                            <button id="delete-account-btn" class="btn btn-danger">Dzēst kontu</button>
+                                            <button id="confirm-delete-account-btn" class="btn btn-danger" style="display: none;">Apstiprināt dzēšanu</button>
                                         </div>
                                     </form>
                                 </div>
