--- a/MovieScribe/Views/Distributor/Index.cshtml
+++ b/MovieScribe/Views/Distributor/Index.cshtml
@@ -9,7 +9,7 @@
     </form>
     <div class="col-md-8 offset-md-2">
         <table class="table table-dark">
-            <a asp-controller="Distributor" asp-action="Create" class="btn btn-success">Add New</a>
+            <a asp-controller="Distributor" asp-action="Create" class="btn btn-success">Pievienot jaunu ierakstu</a>
             <thead>
                 <tr>
                     <th class="text-center">@Html.DisplayNameFor(model => model.ImageData)</th>
@@ -40,8 +40,8 @@
                         {
                             <td class="align-middle text-center">
                                 <div class="btn-group">
-                                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.ID"><i class="bi bi-pencil-square"></i></a>
-                                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.ID"><i class="bi bi-eye"></i></a>
+                                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.ID">Edit</a>
+                                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.ID">Details</a>
                                 </div>
                             </td>
                         }
