--- a/MovieScribe/Views/Shared/NotFound.cshtml
+++ b/MovieScribe/Views/Shared/NotFound.cshtml
@@ -2,6 +2,6 @@
     <div class="col-md-6 offset-3">
         <h1 class="text-danger">404-Not Found</h1>
         <hr />
-        <a class="btn btn-outline-success" asp-controller="Home" asp-action="Index">Home button</a>
+        <a class="btn btn-outline-success" asp-controller="Home" asp-action="Index">Uz sākumlapu</a>
     </div>
 </div>
