--- a/MovieScribe/Views/Shared/_Layout.cshtml
+++ b/MovieScribe/Views/Shared/_Layout.cshtml
@@ -5,7 +5,6 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MovieScribe</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/MovieScribe.styles.css" asp-append-version="true" />
@@ -24,13 +23,13 @@
                     <ul class="navbar-nav flex-grow-1">
                         <span style="padding: 5px;"></span>
                         <a class="btn btn-success my-2 my-sm-0" asp-controller="Media" asp-action="Index">
-                            Media
+                            Mēdija
                         </a>
                         @if (User.IsInRole("admin") || User.IsInRole("moderator"))
                         {
                             <li class="dropdown">
                                 <a class="btn dropdown-toggle" href="#" type="button" style="color: black" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Admin Pages
+                                    Administratora lapas
                                 </a>
 
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -52,9 +51,9 @@
                     {
                         <form class="form-inline my-2 my-lg-0" asp-controller="Media" asp-action="Filter" style="padding-right: 25px;">
                             <div class="input-group">
-                                <input name="searchString" type="text" class="form-control rounded" style="margin-right:10px;" placeholder="Search for media..." aria-label="Recipient's username" aria-describedby="button-addon2">
+                                <input name="searchString" type="text" class="form-control rounded" style="margin-right:10px;" placeholder="Meklēt Mēdiju..." aria-label="Recipient's username" aria-describedby="button-addon2">
                                 <div class="input-group-append">
-                                    <button class="btn btn-success rounded" type="submit"><i class="bi bi-search"></i></button>
+                                    <button class="btn btn-success rounded" type="submit">Meklēt</button>
                                 </div>
                             </div>
                         </form>
