--- a/MovieScribe/Views/Studio/Create.cshtml
+++ b/MovieScribe/Views/Studio/Create.cshtml
@@ -7,16 +7,16 @@
                 <div class="card bg-dark text-white" style="border-radius: 1rem;">
                     <div class="card-body p-5 text-center">
                         <div class="mb-md-5 mt-md-4 pb-5">
-                            <h2 class="fw-bold mb-2 text-uppercase">Add a New Studio</h2>
+                            <h2 class="fw-bold mb-2 text-uppercase">Pievienot jaunu studiju</h2>
                             <form asp-action="Create" method="post" enctype="multipart/form-data">
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                                 <div class="form-outline form-white mb-3">
-                                    <input asp-for="Name" class="form-control form-control-md" placeholder="Name" />
+                                    <input asp-for="Name" class="form-control form-control-md" placeholder="Vārds" />
                                     <span asp-validation-for="Name" class="text-danger"></span>
                                 </div>
                                 <div class="form-outline form-white mb-3">
-                                    <input asp-for="Description" class="form-control form-control-md" placeholder="Description" />
+                                    <input asp-for="Description" class="form-control form-control-md" placeholder="Apraksts" />
                                     <span asp-validation-for="Description" class="text-danger"></span>
                                 </div>
                                 <div class="form-outline form-white mb-3">
@@ -25,7 +25,7 @@
                                 </div>
 
                                 <div class="d-flex justify-content-between">
-                                    <input type="submit" value="Create" class="btn btn-outline-light btn-lg px-5" />
+                                    <input type="submit" value="Pievienot" class="btn btn-outline-light btn-lg px-5" />
                                 </div>
                             </form>
                         </div>
