--- a/MovieScribe/Views/Writer/Edit.cshtml
+++ b/MovieScribe/Views/Writer/Edit.cshtml
@@ -8,7 +8,7 @@
                     <div class="card-body p-5 text-center">
 
                         <div class="mb-md-5 mt-md-4 pb-5">
-                            <h2 class="fw-bold mb-2 text-uppercase">Edit a Writers Details</h2>
+                            <h2 class="fw-bold mb-2 text-uppercase">Rediģēt detalizētu informāciju par rakstnieku</h2>
 
                             @if (Model.ImageData != null)
                             {
@@ -23,23 +23,23 @@
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                                 <div class="form-outline form-white mb-3">
-                                    <input asp-for="Name" class="form-control form-control-md" placeholder="Name" />
+                                    <input asp-for="Name" class="form-control form-control-md" placeholder="Vārds" />
                                     <span asp-validation-for="Name" class="text-danger"></span>
                                 </div>
                                 <div class="form-outline form-white mb-3">
-                                    <input asp-for="Middle_Name" class="form-control form-control-md" placeholder="Middle Name" />
+                                    <input asp-for="Middle_Name" class="form-control form-control-md" placeholder="Otrais vārds" />
                                     <span asp-validation-for="Middle_Name" class="text-danger"></span>
                                 </div>
                                 <div class="form-outline form-white mb-3">
-                                    <input asp-for="Surname" class="form-control form-control-md" placeholder="Surname" />
+                                    <input asp-for="Surname" class="form-control form-control-md" placeholder="Uzvārds" />
                                     <span asp-validation-for="Surname" class="text-danger"></span>
                                 </div>
                                 <div class="form-outline form-white mb-3">
-                                    <input asp-for="Age" class="form-control form-control-md" placeholder="Age" type="number" />
+                                    <input asp-for="Age" class="form-control form-control-md" placeholder="Vecums" type="number" />
                                     <span asp-validation-for="Age" class="text-danger"></span>
                                 </div>
                                 <div class="form-outline form-white mb-3">
-                                    <input asp-for="Biography" class="form-control form-control-md" placeholder="Biography" />
+                                    <input asp-for="Biography" class="form-control form-control-md" placeholder="Biogrāfija" />
                                     <span asp-validation-for="Biography" class="text-danger"></span>
                                 </div>
                                 <div class="form-outline form-white mb-3">
@@ -47,7 +47,7 @@
                                     <img id="ImagePreview" src="#" alt="Image Preview" style="max-width: 200px; display: none;" />
                                 </div>
                                 <div class="d-flex justify-content-between">
-                                    <input class="btn btn-outline-light btn-md px-5" type="submit" value="Edit" />
+                                    <input class="btn btn-outline-light btn-md px-5" type="submit" value="Rediģēt" />
                                 </div>
                             </form>
                         </div>
